--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <img src="/images/logo.png" alt="logo-epico" />
+      <div>
+        <h1>Corso Web Developer</h1>
+        <p>
+          Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono
+          arricchire il CV, tu pensa ad arricchire le tue competenze.
+        </p>
+        <button>PARTIAMO!</button>
+      </div>
+    </header>
 
-</body>
+    <main>
+      <section>
+        <h3>Tutti ti cercheranno</h3>
+        <p>
+          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+          quelal che ti stimola di piu'
+        </p>
+      </section>
+      <section>
+        <h3>Lavora dove vuoi</h3>
+        <p>Lavora da casa, in riva al mare o in montagna.</p>
+        <img src="/images/notebook.jpg" alt="notebook" />
+      </section>
+      <section>
+        <h3>Scegli il tuo ruolo</h3>
+        <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
+      </section>
+      <section>
+        <h3>Lavoro in liberta'</h3>
+        <p>
+          Non serve lavorare in ufficio per essere creatori di prodotti digitali
+        </p>
+      </section>
+      <div>
+        <h2>Epicode garantisce</h2>
+        <p>
+          "3 mesi intesivi di corso che cambieranno radicalmente la tua vita"
+        </p>
+        <p>Mario rossi</p>
+        <p>CEO, epicode</p>
+      </div>
+      <div class="images">
+        <img src="/images/foto1.jpg" alt="normal-notebook" />
+        <h4>Il tuo PC</h4>
+        <p>
+          Se vuoi diventare developer e' l'unico strumento di cui hai bisogno.
+        </p>
+      </div>
+      <div class="images">
+        <img src="/images/foto2.jpg" alt="pc-gaming" />
+        <h4>Il tuo PC</h4>
+        <p>
+          Se vuoi diventare developer e' l'unico strumento di cui hai bisogno
+        </p>
+      </div>
+      <div class="images">
+        <img src="/images/foto3.jpg" alt="colleagues" />
+        <h4>Il tuo PC</h4>
+        <p>
+          Se vuoi diventare developer e' l'unico strumento di cui hai bisogno
+        </p>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
