--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -60,19 +67,29 @@
       </div>
       <div class="images">
         <img src="/images/foto2.jpg" alt="pc-gaming" />
-        <h4>Il tuo PC</h4>
+        <h4>Impara ora</h4>
         <p>
-          Se vuoi diventare developer e' l'unico strumento di cui hai bisogno
+          Impara da chi diventerai tra qualche anno, e diventa una rockstar come
+          loro.
         </p>
       </div>
       <div class="images">
         <img src="/images/foto3.jpg" alt="colleagues" />
-        <h4>Il tuo PC</h4>
-        <p>
-          Se vuoi diventare developer e' l'unico strumento di cui hai bisogno
-        </p>
+        <h4>Lavora subito</h4>
+        <p>Sappiamo cosa vogliono le aziende, perche' lavoriamo con loro.</p>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <h2>Contattaci</h2>
+      <p><i class="fas fa-phone-square-alt"></i>&#40;+39&#41; 11223456</p>
+      <p>
+        <i class="fas fa-envelope"></i>
+        <a href="#">info@epicode.school</a>
+      </p>
+      <p>
+        <i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma
+        &#40;RM&#41;
+      </p>
+    </footer>
   </body>
 </html>
