Refactor HTML structure: move logo inside nav, add classes to sections, and enhance layout with semantic elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <header>
-      <img src="/images/logo.png" alt="logo-epico" />
+      <nav>
+        <img src="/images/logo.png" alt="logo-epico" />
+      </nav>
       <div>
         <h1>Corso Web Developer</h1>
         <p>
@@ -28,7 +30,7 @@
     </header>
 
     <main>
-      <section>
+      <section class="first-section">
         <h3>Tutti ti cercheranno</h3>
         <p>
           Sono 30.000 in Italia le posizioni di developer scoperte, scegli
@@ -50,13 +52,15 @@
           Non serve lavorare in ufficio per essere creatori di prodotti digitali
         </p>
       </section>
-      <div>
+      <div class="red-box">
         <h2>Epicode garantisce</h2>
         <p>
           "3 mesi intesivi di corso che cambieranno radicalmente la tua vita"
         </p>
-        <p>Mario rossi</p>
-        <p>CEO, epicode</p>
+        <section>
+          <p>Mario Rossi</p>
+          <p id="ceo">CEO, epicode</p>
+        </section>
       </div>
       <div class="images">
         <img src="/images/foto1.jpg" alt="normal-notebook" />
