Update index.html and style.css: enhance footer layout, add cursor styles, and improve image section structure

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p id="ceo">CEO, epicode</p>
         </section>
       </div>
-      <div class="images">
+      <div id="first-div-img" class="images">
         <img src="/images/foto1.jpg" alt="normal-notebook" />
         <h4>Il tuo PC</h4>
         <p>
@@ -85,7 +85,10 @@
     </main>
     <footer>
       <h2>Contattaci</h2>
-      <p><i class="fas fa-phone-square-alt"></i>&#40;+39&#41; 11223456</p>
+      <p>
+        <i class="fas fa-phone-square-alt"></i>
+        <span>&#40;+39&#41; 11223456</span>
+      </p>
       <p>
         <i class="fas fa-envelope"></i>
         <a href="#">info@epicode.school</a>
@@ -94,6 +97,10 @@
         <i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma
         &#40;RM&#41;
       </p>
+      <div>
+        <hr />
+      </div>
+      <p id="copyright">© 2021. Immagini di <span>Pixabay</span></p>
     </footer>
   </body>
 </html>
