Fix typo in index.html: correct "Lavoro in liberta'" to "Lavoro in libertà" and update styling in style.css for improved layout and user experience

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
       </section>
       <section>
-        <h3>Lavoro in liberta'</h3>
+        <h3>Lavoro in libertà</h3>
         <p>
           Non serve lavorare in ufficio per essere creatori di prodotti digitali
         </p>
