Refactor HTML structure: reorganize sections, enhance layout, and improve semantic elements in desktop.html and style.css

--- a/desktop.html
+++ b/desktop.html
@@ -30,28 +30,22 @@
     </header>
 
     <main>
-      <section class="first-section">
+      <img src="/images/notebook.jpg" alt="notebook" />
+      <div class="first-section">
         <h3>Tutti ti cercheranno</h3>
         <p>
           Sono 30.000 in Italia le posizioni di developer scoperte, scegli
           quelal che ti stimola di piu'
         </p>
-      </section>
-      <section>
         <h3>Lavora dove vuoi</h3>
         <p>Lavora da casa, in riva al mare o in montagna.</p>
-        <img src="/images/notebook.jpg" alt="notebook" />
-      </section>
-      <section>
         <h3>Scegli il tuo ruolo</h3>
         <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
-      </section>
-      <section>
         <h3>Lavoro in libertà</h3>
         <p>
           Non serve lavorare in ufficio per essere creatori di prodotti digitali
         </p>
-      </section>
+      </div>
       <div class="red-box">
         <h2>Epicode garantisce</h2>
         <p>
@@ -84,19 +78,21 @@
       </div>
     </main>
     <footer>
-      <h2>Contattaci</h2>
-      <p>
-        <i class="fas fa-phone-square-alt"></i>
-        <span>&#40;+39&#41; 11223456</span>
-      </p>
-      <p>
-        <i class="fas fa-envelope"></i>
-        <a href="#">info@epicode.school</a>
-      </p>
-      <p>
-        <i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma
-        &#40;RM&#41;
-      </p>
+      <section>
+        <h2>Contattaci</h2>
+        <p>
+          <i class="fas fa-phone-square-alt"></i>
+          <span>&#40;+39&#41; 11223456</span>
+        </p>
+        <p>
+          <i class="fas fa-envelope"></i>
+          <a href="#">info@epicode.school</a>
+        </p>
+        <p>
+          <i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100
+          Roma &#40;RM&#41;
+        </p>
+      </section>
       <div>
         <hr />
       </div>
