Update header title and improve layout in desktop.html and style.css

--- a/desktop.html
+++ b/desktop.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Corso Web Developer Laptop</title>
     <link rel="stylesheet" href="/css-desktop/reset.css" />
     <link
       rel="stylesheet"
@@ -28,10 +28,10 @@
         <button>PARTIAMO!</button>
       </div>
     </header>
-
     <main>
-      <img src="/images/notebook.jpg" alt="notebook" />
-      <div class="first-section">
+      <section id="container">
+        <img id="laptop" src="/images/notebook.jpg" alt="notebook" />
+
         <h3>Tutti ti cercheranno</h3>
         <p>
           Sono 30.000 in Italia le posizioni di developer scoperte, scegli
@@ -45,7 +45,7 @@
         <p>
           Non serve lavorare in ufficio per essere creatori di prodotti digitali
         </p>
-      </div>
+      </section>
       <div class="red-box">
         <h2>Epicode garantisce</h2>
         <p>
