Refactor layout: restructure main content into a responsive container with image and text columns in desktop.html and style.css

--- a/desktop.html
+++ b/desktop.html
@@ -29,23 +29,27 @@
       </div>
     </header>
     <main>
-      <section id="container">
-        <img id="laptop" src="/images/notebook.jpg" alt="notebook" />
-
-        <h3>Tutti ti cercheranno</h3>
-        <p>
-          Sono 30.000 in Italia le posizioni di developer scoperte, scegli
-          quelal che ti stimola di piu'
-        </p>
-        <h3>Lavora dove vuoi</h3>
-        <p>Lavora da casa, in riva al mare o in montagna.</p>
-        <h3>Scegli il tuo ruolo</h3>
-        <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
-        <h3>Lavoro in libertà</h3>
-        <p>
-          Non serve lavorare in ufficio per essere creatori di prodotti digitali
-        </p>
-      </section>
+      <div class="container">
+        <div class="colonna-immagine">
+          <img id="laptop" src="/images/notebook.jpg" alt="notebook" />
+        </div>
+        <div class="colonna-testo">
+          <h3>Tutti ti cercheranno</h3>
+          <p>
+            Sono 30.000 in Italia le posizioni di developer scoperte, scegli
+            quelal che ti stimola di piu'
+          </p>
+          <h3>Lavora dove vuoi</h3>
+          <p>Lavora da casa, in riva al mare o in montagna.</p>
+          <h3>Scegli il tuo ruolo</h3>
+          <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
+          <h3>Lavoro in libertà</h3>
+          <p>
+            Non serve lavorare in ufficio per essere creatori di prodotti
+            digitali
+          </p>
+        </div>
+      </div>
       <div class="red-box">
         <h2>Epicode garantisce</h2>
         <p>
