Refactor image sections: reorganize HTML structure and adjust CSS styles for better layout and responsiveness in desktop.html and style.css

--- a/desktop.html
+++ b/desktop.html
@@ -60,25 +60,27 @@
           <p id="ceo">CEO, epicode</p>
         </section>
       </div>
-      <div id="first-div-img" class="images">
-        <img src="/images/foto1.jpg" alt="normal-notebook" />
-        <h4>Il tuo PC</h4>
-        <p>
-          Se vuoi diventare developer e' l'unico strumento di cui hai bisogno.
-        </p>
-      </div>
-      <div class="images">
-        <img src="/images/foto2.jpg" alt="pc-gaming" />
-        <h4>Impara ora</h4>
-        <p>
-          Impara da chi diventerai tra qualche anno, e diventa una rockstar come
-          loro.
-        </p>
-      </div>
-      <div class="images">
-        <img src="/images/foto3.jpg" alt="colleagues" />
-        <h4>Lavora subito</h4>
-        <p>Sappiamo cosa vogliono le aziende, perche' lavoriamo con loro.</p>
+      <div class="container-2">
+        <div id="first-div-img" class="images" class="colonna-immagine">
+          <img src="/images/foto1.jpg" alt="normal-notebook" />
+          <h4>Il tuo PC</h4>
+          <p>
+            Se vuoi diventare developer e' l'unico strumento di cui hai bisogno.
+          </p>
+        </div>
+        <div class="images" class="colonna-immagine">
+          <img src="/images/foto2.jpg" alt="pc-gaming" />
+          <h4>Impara ora</h4>
+          <p>
+            Impara da chi diventerai tra qualche anno, e diventa una rockstar
+            come loro.
+          </p>
+        </div>
+        <div class="images" class="colonna-immagine">
+          <img src="/images/foto3.jpg" alt="colleagues" />
+          <h4>Lavora subito</h4>
+          <p>Sappiamo cosa vogliono le aziende, perche' lavoriamo con loro.</p>
+        </div>
       </div>
     </main>
     <footer>
