Refactor layout: update class names for consistency and adjust styles for better alignment in desktop.html and style.css

--- a/desktop.html
+++ b/desktop.html
@@ -60,7 +60,7 @@
           <p id="ceo">CEO, epicode</p>
         </section>
       </div>
-      <div class="container-2">
+      <div class="nd-container">
         <div id="first-div-img" class="images" class="colonna-immagine">
           <img src="/images/foto1.jpg" alt="normal-notebook" />
           <h4>Il tuo PC</h4>
@@ -76,7 +76,7 @@
             come loro.
           </p>
         </div>
-        <div class="images" class="colonna-immagine">
+        <div class="images" class="colonna-immagine" id="last-div">
           <img src="/images/foto3.jpg" alt="colleagues" />
           <h4>Lavora subito</h4>
           <p>Sappiamo cosa vogliono le aziende, perche' lavoriamo con loro.</p>
